CIRC-2661: Fix sonar issue